kubernetes/apps/default/tracearr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracearr
  namespace: default
  labels:
    app: tracearr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tracearr.torquasmvo.internal
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.242
  selector:
    app: tracearr
  ports:
    - name: http
      port: 3000
      targetPort: http
